--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
 
     <hr />
 
-    <button onclick="kiesActie('afspraak')">✅ Afspraak maken</button>
-    <button onclick="kiesActie('weigeren')">❌ Ik geef geen toestemming</button>
+<button id="afspraakBtn" onclick="kiesActie('afspraak')">✅ Afspraak maken</button>
+<button id="weigerenBtn" onclick="kiesActie('weigeren')">❌ Ik geef geen toestemming</button>
+
 
     <div id="afspraakSectie" style="display:none;">
       <label>Kies één of meer geplande datums:</label>
