--- a/index.html
+++ b/index.html
@@ -108,6 +108,39 @@
       align-items: center;
       z-index: 10000;
     }
+
+    #redenKeuze {
+  display: flex;
+  flex-direction: column;
+  max-width: 400px; /* of wat passend is */
+  gap: 8px;
+}
+
+#redenKeuze > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#redenKeuze label {
+  flex: 1;
+  font-weight: bold;
+}
+
+#redenKeuze select {
+  flex: 1;
+  margin-left: 10px;
+  padding: 6px;
+  font-size: 1rem;
+}
+
+#redenKeuze button {
+  align-self: flex-start; /* knop links onder uitlijnen */
+  padding: 8px 15px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
   </style>
 </head>
 <body>
