--- a/index.html
+++ b/index.html
@@ -182,13 +182,15 @@
     </div>
 
     <div id="redenKeuze" style="display:none;">
-      <label>Waarom geeft u geen toestemming?</label>
-      <select id="redenSelect">
-        <option value="Niet beschikbaar op geplande datums">Niet beschikbaar op geplande datums</option>
-        <option value="Geen interesse">Geen interesse</option>
-        <option value="Graag overleg nodig">Graag overleg nodig</option>
-      </select>
-      <button onclick="submitReden()">Verstuur reden</button>
+  <label for="redenSelect">Waarom geeft u geen toestemming?</label>
+  <select id="redenSelect">
+    <option value="Niet beschikbaar op geplande datums">Niet beschikbaar op geplande datums</option>
+    <option value="Geen interesse">Geen interesse</option>
+    <option value="Graag overleg nodig">Graag overleg nodig</option>
+  </select>
+</div>
+<button onclick="submitReden()">Verstuur reden</button>
+
     </div>
 
     <!-- ✅ Toegevoegde annuleer knop -->
