--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
     align-items: flex-start;
   }
 
+  @media (max-width: 600px) {
+  button {
+    width: 100%;
+  }
+}
+
   .formrow label {
     width: 100%;
     margin-bottom: 4px;
