--- a/index.html
+++ b/index.html
@@ -193,6 +193,14 @@ button.terug {
   color: black;
 }
 
+    #afspraakSectie button,
+#redenKeuze button,
+#annuleerBtn {
+  width: 100%;
+  max-width: 400px;
+  box-sizing: border-box;
+}
+
     
   </style>
 </head>
