--- a/index.html
+++ b/index.html
@@ -201,6 +201,15 @@ button.terug {
   box-sizing: border-box;
 }
 
+    .formrow button {
+  margin-left: 10px;
+  padding: 4px 8px;
+  font-size: 1rem;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+}
+
     
   </style>
 </head>
@@ -210,25 +219,26 @@ button.terug {
 
     <h2 id="welkomText">Welkom bewoner</h2>
 
-    <div class="formrow">
-      <label for="huisnummer">Huisnummer:</label>
-      <input type="text" id="huisnummer" readonly />
-    </div>
+<p><strong>Onderstaande gegevens zijn bij ons bekend. Indien niet correct, kunt u deze aanpassen.</strong></p>
 
-    <div class="formrow">
-      <label for="email">E-mail:</label>
-      <input type="email" id="email" />
-    </div>
+<div class="formrow">
+  <label for="email">E-mail:</label>
+  <input type="email" id="email" readonly />
+  <button type="button" onclick="toggleEdit('email')">🖉</button>
+</div>
 
-    <div class="formrow">
-      <label for="telefoon">Telefoonnummer:</label>
-      <input type="tel" id="telefoon" />
-    </div>
+<div class="formrow">
+  <label for="telefoon">Telefoonnummer:</label>
+  <input type="tel" id="telefoon" readonly />
+  <button type="button" onclick="toggleEdit('telefoon')">🖉</button>
+</div>
 
-    <div class="formrow">
-      <label for="opmerking">Opmerking:</label>
-      <textarea id="opmerking" rows="3"></textarea>
-    </div>
+<div class="formrow">
+  <label for="opmerking">Opmerking:</label>
+  <textarea id="opmerking" rows="3" readonly></textarea>
+  <button type="button" onclick="toggleEdit('opmerking')">🖉</button>
+</div>
+
 
     <hr />
 
@@ -349,6 +359,11 @@ function annuleerKeuze() {
   document.getElementById("resultaat").innerText = "";
 }
 
+function toggleEdit(id) {
+  const veld = document.getElementById(id);
+  veld.readOnly = !veld.readOnly;
+  veld.focus();
+}
 
 
     function loadAvailableDates() {
