--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ button.terug {
 
     <h2 id="welkomText">Welkom bewoner</h2>
 
-<p><strong>Onderstaande gegevens zijn bij ons bekend. Indien niet correct, kunt u deze aanpassen.</strong></p>
+<p><strong>"De onderstaande gegevens hebben wij van u. Kloppen ze niet of mist er iets? Dan kunt u ze hieronder aanpassen."</strong></p>
 
 <div class="formrow">
   <label for="email">E-mail:</label>
