--- a/zoekadres.html
+++ b/zoekadres.html
@@ -1,78 +1,179 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-  <meta charset="UTF-8">
-  <title>Gegevens invullen</title>
+  <meta charset="UTF-8" />
+  <title>KPN Afspraakgegevens Invoeren</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body { font-family: sans-serif; max-width: 600px; margin: 2em auto; }
-    label { display: block; margin-top: 1em; }
-    input, select, textarea, button {
-      width: 100%; padding: 0.5em; font-size: 1em;
+    body { font-family: Arial, sans-serif; padding: 20px; background: #f2f2f2; }
+    select, input, textarea, button {
+      width: 100%; padding: 10px; margin: 10px 0; font-size: 16px;
     }
-    button { margin-top: 1.5em; background-color: #4CAF50; color: white; border: none; }
+    label { font-weight: bold; margin-top: 10px; display: block; }
+    #formSection { display: none; background: #fff; padding: 20px; border-radius: 8px; }
+    button { background-color: #0078d7; color: white; border: none; cursor: pointer; }
+    button:hover { background-color: #005fa3; }
   </style>
 </head>
 <body>
-  <h2>Vul je gegevens in</h2>
 
-  <form id="form">
-    <label for="sheet">Project (sheet):</label>
-    <select id="sheet" required></select>
+  <h2>KPN Glasvezel – Contactgegevens invullen</h2>
 
-    <label for="plaats">Plaats:</label>
-    <select id="plaats" required disabled></select>
+  <label for="project">Kies project:</label>
+  <select id="project">
+    <option value="">-- Selecteer een project --</option>
+  </select>
 
-    <label for="straat">Straat:</label>
-    <select id="straat" required disabled></select>
+  <label for="plaats">Plaats:</label>
+  <select id="plaats" disabled>
+    <option value="">-- Kies eerst een project --</option>
+  </select>
 
-    <label for="huisnummer">Huisnummer:</label>
-    <select id="huisnummer" required disabled></select>
+  <label for="straat">Straat:</label>
+  <select id="straat" disabled></select>
+
+  <label for="huisnummer">Huisnummer:</label>
+  <select id="huisnummer" disabled></select>
+
+  <div id="formSection">
+    <label for="telefoon">Telefoonnummer:</label>
+    <input type="text" id="telefoon" />
 
     <label for="email">E-mailadres:</label>
-    <input type="email" id="email" required>
-
-    <label for="telefoon">Telefoonnummer:</label>
-    <input type="tel" id="telefoon" required>
+    <input type="email" id="email" />
 
     <label for="opmerking">Opmerking:</label>
-    <textarea id="opmerking"></textarea>
+    <textarea id="opmerking" rows="3"></textarea>
 
-    <button type="submit">Verstuur</button>
-  </form>
+    <button onclick="verzendGegevens()">Verzend gegevens</button>
+  </div>
 
-  <div id="status" style="margin-top: 1em; color: green;"></div>
+  <p id="status"></p>
 
   <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbw4rVYGa0KhNwSdv0JlvpXr3n5ExWJIWe-QbDM2777eLt735Fz3VsvR0fUb2sbq_3nu/exec'; // Vervang door jouw Script URL
+    const scriptUrl = "https://script.google.com/macros/s/AKfycbw4rVYGa0KhNwSdv0JlvpXr3n5ExWJIWe-QbDM2777eLt735Fz3VsvR0fUb2sbq_3nu/exec";
 
-    const sheet = document.getElementById("sheet");
-    const plaats = document.getElementById("plaats");
-    const straat = document.getElementById("straat");
-    const huisnummer = document.getElementById("huisnummer");
+    let projectData = [];
 
-    // Vul sheets
-    fetch(`${scriptURL}?action=getSheets`)
-      .then(res => res.json())
-      .then(data => {
-        data.forEach(name => {
-          const opt = document.createElement("option");
-          opt.value = name;
-          opt.textContent = name;
-          sheet.appendChild(opt);
-        });
+    async function laadProjecten() {
+      const res = await fetch(`${scriptUrl}?action=getSheetNames`);
+      const projecten = await res.json();
+      const select = document.getElementById("project");
+      projecten.forEach(name => {
+        const opt = document.createElement("option");
+        opt.value = name;
+        opt.textContent = name;
+        select.appendChild(opt);
+      });
+    }
+
+    async function laadAdressen(sheet) {
+      const res = await fetch(`${scriptUrl}?action=getSheetDataByName&sheet=${encodeURIComponent(sheet)}`);
+      const data = await res.json();
+      projectData = data;
+
+      // Plaats uniek vullen
+      const plaatsSelect = document.getElementById("plaats");
+      plaatsSelect.innerHTML = '<option value="">-- Selecteer plaats --</option>';
+      const uniekePlaatsen = [...new Set(data.map(r => r.plaats))];
+      uniekePlaatsen.forEach(plaats => {
+        const opt = document.createElement("option");
+        opt.value = plaats;
+        opt.textContent = plaats;
+        plaatsSelect.appendChild(opt);
       });
 
-    sheet.addEventListener("change", () => {
-      plaats.innerHTML = '<option value="">-- Kies plaats --</option>';
-      straat.innerHTML = '<option value="">-- Kies straat --</option>';
-      huisnummer.innerHTML = '<option value="">-- Kies huisnummer --</option>';
-      plaats.disabled = straat.disabled = huisnummer.disabled = true;
+      plaatsSelect.disabled = false;
+      document.getElementById("straat").innerHTML = '<option value="">-- Selecteer straat --</option>';
+      document.getElementById("huisnummer").innerHTML = '<option value="">-- Selecteer huisnummer --</option>';
+      document.getElementById("straat").disabled = true;
+      document.getElementById("huisnummer").disabled = true;
+      document.getElementById("formSection").style.display = "none";
+    }
 
-      fetch(`${scriptURL}?action=getPlaatsen&sheet=${sheet.value}`)
-        .then(res => res.json())
-        .then(data => {
-          data.forEach(p => {
-            const opt = document.createElement("option");
-            opt.value = p;
-            opt.textContent = p;
-            plaats.appendChild(opt)
+    document.getElementById("project").addEventListener("change", e => {
+      const sheet = e.target.value;
+      if (sheet) {
+        laadAdressen(sheet);
+      }
+    });
+
+    document.getElementById("plaats").addEventListener("change", function () {
+      const plaats = this.value;
+      const straten = [...new Set(projectData.filter(r => r.plaats === plaats).map(r => r.straat))];
+      const straatSelect = document.getElementById("straat");
+      straatSelect.innerHTML = '<option value="">-- Selecteer straat --</option>';
+      straten.forEach(straat => {
+        const opt = document.createElement("option");
+        opt.value = straat;
+        opt.textContent = straat;
+        straatSelect.appendChild(opt);
+      });
+      straatSelect.disabled = false;
+      document.getElementById("huisnummer").innerHTML = '<option value="">-- Selecteer huisnummer --</option>';
+      document.getElementById("huisnummer").disabled = true;
+      document.getElementById("formSection").style.display = "none";
+    });
+
+    document.getElementById("straat").addEventListener("change", function () {
+      const plaats = document.getElementById("plaats").value;
+      const straat = this.value;
+      const nummers = projectData
+        .filter(r => r.plaats === plaats && r.straat === straat)
+        .map(r => r.huisnummer);
+      const huisnrSelect = document.getElementById("huisnummer");
+      huisnrSelect.innerHTML = '<option value="">-- Selecteer huisnummer --</option>';
+      nummers.forEach(nr => {
+        const opt = document.createElement("option");
+        opt.value = nr;
+        opt.textContent = nr;
+        huisnrSelect.appendChild(opt);
+      });
+      huisnrSelect.disabled = false;
+      document.getElementById("formSection").style.display = "none";
+    });
+
+    document.getElementById("huisnummer").addEventListener("change", function () {
+      if (this.value) {
+        document.getElementById("formSection").style.display = "block";
+      } else {
+        document.getElementById("formSection").style.display = "none";
+      }
+    });
+
+    async function verzendGegevens() {
+      const project = document.getElementById("project").value;
+      const plaats = document.getElementById("plaats").value;
+      const straat = document.getElementById("straat").value;
+      const huisnummer = document.getElementById("huisnummer").value;
+      const email = document.getElementById("email").value;
+      const telefoon = document.getElementById("telefoon").value;
+      const opmerking = document.getElementById("opmerking").value;
+
+      const payload = {
+        action: "saveContactData",
+        sheet: project,
+        plaats,
+        straat,
+        huisnummer,
+        email,
+        telefoon,
+        opmerking
+      };
+
+      const res = await fetch(scriptUrl, {
+        method: "POST",
+        body: JSON.stringify(payload),
+        headers: { "Content-Type": "application/json" }
+      });
+
+      const tekst = await res.text();
+      document.getElementById("status").textContent = tekst;
+    }
+
+    // Init
+    laadProjecten();
+  </script>
+
+</body>
+</html>
