--- a/zoekadres.html
+++ b/zoekadres.html
@@ -45,7 +45,7 @@
     <label for="opmerking">Opmerking:</label>
     <textarea id="opmerking" rows="3"></textarea>
 
-    <button onclick="verzendGegevens()">Verzend gegevens</button>
+    <button onclick="submitData()">Verzend gegevens</button>
   </div>
 
   <p id="status"></p>
@@ -142,7 +142,12 @@
     });
 
 async function submitData() {
-  const melding = document.getElementById("melding");
+  const melding = document.getElementById("status");
+  const projectSelect = document.getElementById("project");
+  const plaatsSelect = document.getElementById("plaats");
+  const straatSelect = document.getElementById("straat");
+  const huisnummerSelect = document.getElementById("huisnummer");
+
   melding.textContent = "Even wachten...";
 
   const payload = {
@@ -173,6 +178,7 @@ async function submitData() {
     melding.textContent = "Fout bij verzenden";
   }
 }
+
 
 
     // Init
