--- a/zoekadres.html
+++ b/zoekadres.html
@@ -48,7 +48,7 @@
     <button onclick="submitData()">Verzend gegevens</button>
   </div>
 
-  <p id="status"></p>
+  <p id="melding"></p>
 
   <script>
     const scriptUrl = "https://script.google.com/macros/s/AKfycbxW-MP2SmLyOGvsda-njSTAktLXdtRjBxMO57wZna1o8yKZ0FP6duOqPDku97UvOI-G/exec";
