--- a/zoekadres.html
+++ b/zoekadres.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8" />
-  <title>KPN Afspraakgegevens Invoeren</title>
+  <title>Afspraakgegevens Invoeren</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; background: #f2f2f2; }
